--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Мое резюме</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
+	<head>
+		<meta charset="utf-8">
+		<title>LAB1</title>
+		<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<div class="open">
+			<div class="layer"></div>
+			<div class="layer"></div>
+		</div>
+		<section>
+			<div class="header">
+				<h2 class="logo">MAIN LOGO</h2>
+				<ul>
+					<li>
+						<a href="#" class="active">СТРАНИЦА</a>
+					</li>
+					<li>
+						<a href="#">Лабораторная работа №1</a>
+						<a href="https://github.com/Saburtalo/romagarganjia">Создана страница пользователя </a>
+						<a href="https://github.com/stankin/inet-2019/wiki/%D0%98%D0%94%D0%9C_19_02">Страница выгружена</a>
 
-	<header>
-		<h1>Мое резюме</h1>
-	</header>
-	<div>
-		<aside>
-			<img src="photo.jpg">
-		</aside>
-
-		<main>
-			<h2>Гарганджиа Роман</h2>
-			<p>Hometown:Грузиа <br>
-			   birthday:November 29, 1994 <br>
-			   University: МГТУ «Станкин» <br>
-			   Current city:Moscow
-
-			</p>
-
-			
-
-			<ul>
-			  <li>
-			  	 <a href="https://vk.com/id512418403">VK</a>
-			  </li>	
-			  <li>
-			  	 <a href="https://www.facebook.com/roma.garganjia">FB</a>
-			  </li>	
+					</li>
+					<li>
+						<a href="#">Лабораторная работа №2</a>
+					</li>
+					<li>
+						<a href="#">Лабораторная работа №3</a>
+					</li>
+					
+				</ul>
+			</div>
+			<div class="bannerText">
+				<h2>IDM-19-02</h2><br>
+				<h3>Garganjia Roman</h3>
+				<p></p>
+				<a href="#">Read More</a>
+			</div>
+			<img src="bulb.jpg" class="bulb">
+			<ul class="sci">
+				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+				<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+				<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 			</ul>
+			<div class="element1"></div>
+			<div class="element2"></div>
 
-
-		</main>
-	</div>
-
-	<footer>
-		<p>
-			Гарганджиа Роман, 2019
-		</p>
-	</footer>
-
-</body>
+		</section>
+	</body>
 </html>
