--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 						<a href="#" class="active">СТРАНИЦА</a>
 					</li>
 					<li>
-						<a href="#">Лабораторная работа №1</a>
-						<a href="https://github.com/Saburtalo/romagarganjia">Создана страница пользователя </a>
-						<a href="https://github.com/stankin/inet-2019/wiki/%D0%98%D0%94%D0%9C_19_02">Страница выгружена</a>
+						<a href="LAB1.html">Лабораторная работа №1</a>
+						
 
 					</li>
 					<li>
