--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<a href="#" class="active">СТРАНИЦА</a>
 					</li>
 					<li>
-						<a href="LAB1.html">Лабораторная работа №1</a>
+						<a href="lab1.html">Лабораторная работа №1</a>
 						
 
 					</li>
