--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 						<a href="#" class="active">СТРАНИЦА</a>
 					</li>
 					<li>
-						<a href="lab1.html">Лабораторная работа №1</a>
+						<a href="LAB1.html">Лабораторная работа №1</a>
 						
 
 					</li>
 					<li>
-						<a href="#">Лабораторная работа №2</a>
+						<a href="lab2.html">Лабораторная работа №2</a>
 					</li>
 					<li>
-						<a href="#">Лабораторная работа №3</a>
+						<a href="lab3.html">Лабораторная работа №3</a>
 					</li>
 					
 				</ul>
